--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "it-starts-with-you",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "Scaffolding project for website design project",
     "main": "index.js",
     "scripts": {
@@ -9,20 +9,23 @@
     "author": "Manoj Barman",
     "license": "ISC",
     "dependencies": {
-        "gulp": "^4.0.0"
+        "express": "^4.17.1",
+        "gulp": "^4.0.2",
+        "gulp-replace": "^1.0.0"
     },
     "devDependencies": {
-        "autoprefixer": "^9.4.6",
-        "cssnano": "^4.1.8",
+        "cssnano": "^4.1.10",
         "del": "^3.0.0",
-        "gulp-cache": "^1.1.1",
+        "gulp-babel": "^8.0.0-beta.2",
+        "gulp-cache": "^1.1.3",
         "gulp-data": "^1.3.1",
         "gulp-imagemin": "^5.0.3",
-        "gulp-nunjucks-render": "^2.2.2",
+        "gulp-nunjucks-render": "^2.2.3",
         "gulp-postcss": "^8.0.0",
+        "gulp-rename": "^1.4.0",
         "gulp-sass": "^4.0.2",
-        "gulp-sourcemaps": "^2.6.4",
-        "gulp-uglify": "^3.0.1",
+        "gulp-sourcemaps": "^2.6.5",
+        "gulp-uglify-es": "^2.0.0",
         "gulp-useref": "^3.1.6"
     }
 }
